--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 lib
-sign
+gpg
 dist
 logs
 
@@ -22,3 +22,6 @@ logs
 
 # exclude incremental update files
 HEAD
+
+# Ignore Mac DS_Store files
+.DS_Store
