--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -19,6 +19,7 @@ redirect 301 /help/args.html          https://www.filebot.net/forums/viewtopic.p
 redirect 301 /help/xattr.html         https://www.filebot.net/forums/viewtopic.php?t=324
 redirect 301 /help/presets.html       https://www.filebot.net/forums/viewtopic.php?t=3228
 redirect 301 /help/apply.html         https://www.filebot.net/forums/viewtopic.php?t=11079
+redirect 301 /help/keyboard.html      https://www.filebot.net/forums/viewtopic.php?t=12703
 redirect 301 /report.html             https://www.filebot.net/forums/viewforum.php?f=6
 redirect 301 /notes.html              https://www.filebot.net/forums/viewforum.php?f=7
 redirect 301 /manpage.html            https://www.filebot.net/cli.html#arguments
