--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -16,6 +16,7 @@ redirect 301 /syno/support.html       https://www.filebot.net/forums/viewforum.p
 redirect 301 /qnap/support.html       https://www.filebot.net/forums/viewforum.php?f=13
 redirect 301 /error/429.html          https://www.filebot.net/forums/viewtopic.php?t=9594
 redirect 301 /help/args.html          https://www.filebot.net/forums/viewtopic.php?t=1899
+redirect 301 /help/@files.html        https://www.filebot.net/forums/viewtopic.php?t=3244
 redirect 301 /help/xattr.html         https://www.filebot.net/forums/viewtopic.php?t=324
 redirect 301 /help/plex.html          https://www.filebot.net/forums/viewtopic.php?t=4116
 redirect 301 /help/presets.html       https://www.filebot.net/forums/viewtopic.php?t=3228
