--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -3,49 +3,49 @@ redirect 301 /windows/purchase.html   https://www.microsoft.com/en-us/store/p/fi
 redirect 301 /mac/purchase.html       https://itunes.apple.com/us/app/filebot/id905384638?mt=12&uo=6&at=1l3vupy&ct=purchase
 
 # Redirect to Support Pages
-redirect 301 /manual.html             https://www.filebot.net/forums/viewtopic.php?t=7
-redirect 301 /amc.html                https://www.filebot.net/forums/viewtopic.php?t=215
-redirect 301 /help.html               https://www.filebot.net/forums/viewtopic.php?t=1868
-redirect 301 /activate.html           https://www.filebot.net/forums/viewtopic.php?t=6121
-redirect 301 /refund.html             https://www.filebot.net/forums/viewtopic.php?t=6118
-redirect 301 /support.html            https://www.filebot.net/forums/viewforum.php?f=8
-redirect 301 /windows/support.html    https://www.filebot.net/forums/viewforum.php?f=10
-redirect 301 /mac/support.html        https://www.filebot.net/forums/viewforum.php?f=12
-redirect 301 /linux/support.html      https://www.filebot.net/forums/viewforum.php?f=11
-redirect 301 /syno/support.html       https://www.filebot.net/forums/viewforum.php?f=13
-redirect 301 /qnap/support.html       https://www.filebot.net/forums/viewforum.php?f=13
-redirect 301 /error/429.html          https://www.filebot.net/forums/viewtopic.php?t=9594
-redirect 301 /help/args.html          https://www.filebot.net/forums/viewtopic.php?t=1899
-redirect 301 /help/@files.html        https://www.filebot.net/forums/viewtopic.php?t=3244
-redirect 301 /help/xattr.html         https://www.filebot.net/forums/viewtopic.php?t=324
-redirect 301 /help/plex.html          https://www.filebot.net/forums/viewtopic.php?t=4116
-redirect 301 /help/presets.html       https://www.filebot.net/forums/viewtopic.php?t=3228
-redirect 301 /help/apply.html         https://www.filebot.net/forums/viewtopic.php?t=11079
-redirect 301 /help/keyboard.html      https://www.filebot.net/forums/viewtopic.php?t=12703
-redirect 301 /report.html             https://www.filebot.net/forums/viewforum.php?f=6
-redirect 301 /notes.html              https://www.filebot.net/forums/viewforum.php?f=7
-redirect 301 /manpage.html            https://www.filebot.net/cli.html#arguments
-redirect 301 /tutorials.html          https://youtube.com/playlist?list=PLdPvEJhzxLMBBQrv9pmVumjzdGoEbQcH9
-redirect 301 /channel.html            https://discord.com/invite/cKVvZ2S
-redirect 301 /contact/paddle.html     https://paddle.net/
+redirect 301 /manual.html               https://www.filebot.net/forums/viewtopic.php?t=7
+redirect 301 /amc.html                  https://www.filebot.net/forums/viewtopic.php?t=215
+redirect 301 /help.html                 https://www.filebot.net/forums/viewtopic.php?t=1868
+redirect 301 /activate.html             https://www.filebot.net/forums/viewtopic.php?t=6121
+redirect 301 /refund.html               https://www.filebot.net/forums/viewtopic.php?t=6118
+redirect 301 /support.html              https://www.filebot.net/forums/viewforum.php?f=8
+redirect 301 /windows/support.html      https://www.filebot.net/forums/viewforum.php?f=10
+redirect 301 /mac/support.html          https://www.filebot.net/forums/viewforum.php?f=12
+redirect 301 /linux/support.html        https://www.filebot.net/forums/viewforum.php?f=11
+redirect 301 /syno/support.html         https://www.filebot.net/forums/viewforum.php?f=13
+redirect 301 /qnap/support.html         https://www.filebot.net/forums/viewforum.php?f=13
+redirect 301 /error/429.html            https://www.filebot.net/forums/viewtopic.php?t=9594
+redirect 301 /help/args.html            https://www.filebot.net/forums/viewtopic.php?t=1899
+redirect 301 /help/argument-files.html  https://www.filebot.net/forums/viewtopic.php?t=3244
+redirect 301 /help/xattr.html           https://www.filebot.net/forums/viewtopic.php?t=324
+redirect 301 /help/plex.html            https://www.filebot.net/forums/viewtopic.php?t=4116
+redirect 301 /help/presets.html         https://www.filebot.net/forums/viewtopic.php?t=3228
+redirect 301 /help/apply.html           https://www.filebot.net/forums/viewtopic.php?t=11079
+redirect 301 /help/keyboard.html        https://www.filebot.net/forums/viewtopic.php?t=12703
+redirect 301 /report.html               https://www.filebot.net/forums/viewforum.php?f=6
+redirect 301 /notes.html                https://www.filebot.net/forums/viewforum.php?f=7
+redirect 301 /manpage.html              https://www.filebot.net/cli.html#arguments
+redirect 301 /tutorials.html            https://youtube.com/playlist?list=PLdPvEJhzxLMBBQrv9pmVumjzdGoEbQcH9
+redirect 301 /channel.html              https://discord.com/invite/cKVvZ2S
+redirect 301 /contact/paddle.html       https://paddle.net/
 
 # Redirect to Package Links
-redirect 301 /windows/winget.html     https://www.filebot.net/forums/viewtopic.php?t=12620
-redirect 301 /windows/scoop.html      https://www.filebot.net/forums/viewtopic.php?t=12163
-redirect 301 /windows/chocolatey.html https://chocolatey.org/packages/filebot/
-redirect 301 /mac/brew.html           https://www.filebot.net/forums/viewtopic.php?t=2049
-redirect 301 /linux/apt.html          https://www.filebot.net/forums/viewtopic.php?t=6028
-redirect 301 /linux/yum.html          https://www.filebot.net/forums/viewtopic.php?t=10631
-redirect 301 /linux/syno.html         https://www.filebot.net/forums/viewtopic.php?t=1802
-redirect 301 /linux/qnap.html         https://www.filebot.net/forums/viewtopic.php?t=6014
-redirect 301 /linux/snap.html         https://www.filebot.net/forums/viewtopic.php?t=5984
-redirect 301 /linux/docker.html       https://github.com/filebot/filebot-docker#readme
-redirect 301 /linux/aur.html          https://aur.archlinux.org/packages/filebot/
+redirect 301 /windows/winget.html       https://www.filebot.net/forums/viewtopic.php?t=12620
+redirect 301 /windows/scoop.html        https://www.filebot.net/forums/viewtopic.php?t=12163
+redirect 301 /windows/chocolatey.html   https://chocolatey.org/packages/filebot/
+redirect 301 /mac/brew.html             https://www.filebot.net/forums/viewtopic.php?t=2049
+redirect 301 /linux/apt.html            https://www.filebot.net/forums/viewtopic.php?t=6028
+redirect 301 /linux/yum.html            https://www.filebot.net/forums/viewtopic.php?t=10631
+redirect 301 /linux/syno.html           https://www.filebot.net/forums/viewtopic.php?t=1802
+redirect 301 /linux/qnap.html           https://www.filebot.net/forums/viewtopic.php?t=6014
+redirect 301 /linux/snap.html           https://www.filebot.net/forums/viewtopic.php?t=5984
+redirect 301 /linux/docker.html         https://github.com/filebot/filebot-docker#readme
+redirect 301 /linux/aur.html            https://aur.archlinux.org/packages/filebot/
 
 # Redirect Forum Links
-redirect 301 /forums/rules.php        https://www.filebot.net/forums/viewtopic.php?t=1868
-redirect 301 /forums/faq.php          https://www.filebot.net/forums/viewtopic.php?t=7
-redirect 301 /forums/help/faq         https://www.filebot.net/forums/viewtopic.php?t=7
+redirect 301 /forums/rules.php          https://www.filebot.net/forums/viewtopic.php?t=1868
+redirect 301 /forums/faq.php            https://www.filebot.net/forums/viewtopic.php?t=7
+redirect 301 /forums/help/faq           https://www.filebot.net/forums/viewtopic.php?t=7
 
 # Custom Error Page
 ErrorDocument 500 "BAD REQUEST"
