redirect 301 /help/generic-files.html   https://www.filebot.net/forums/viewtopic.php?t=2072

--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -17,11 +17,13 @@ redirect 301 /qnap/support.html         https://www.filebot.net/forums/viewforum
 redirect 301 /error/429.html            https://www.filebot.net/forums/viewtopic.php?t=9594
 redirect 301 /help/args.html            https://www.filebot.net/forums/viewtopic.php?t=1899
 redirect 301 /help/argument-files.html  https://www.filebot.net/forums/viewtopic.php?t=3244
+redirect 301 /help/generic-files.html   https://www.filebot.net/forums/viewtopic.php?t=2072
 redirect 301 /help/xattr.html           https://www.filebot.net/forums/viewtopic.php?t=324
 redirect 301 /help/plex.html            https://www.filebot.net/forums/viewtopic.php?t=4116
 redirect 301 /help/presets.html         https://www.filebot.net/forums/viewtopic.php?t=3228
 redirect 301 /help/apply.html           https://www.filebot.net/forums/viewtopic.php?t=11079
 redirect 301 /help/keyboard.html        https://www.filebot.net/forums/viewtopic.php?t=12703
+redirect 301 /help/history.html         https://www.filebot.net/forums/viewtopic.php?t=12133
 redirect 301 /report.html               https://www.filebot.net/forums/viewforum.php?f=6
 redirect 301 /notes.html                https://www.filebot.net/forums/viewforum.php?f=7
 redirect 301 /manpage.html              https://www.filebot.net/cli.html#arguments
