--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -8,24 +8,25 @@ redirect 301 /amc.html                  https://www.filebot.net/forums/viewtopic
 redirect 301 /help.html                 https://www.filebot.net/forums/viewtopic.php?t=1868
 redirect 301 /activate.html             https://www.filebot.net/forums/viewtopic.php?t=6121
 redirect 301 /refund.html               https://www.filebot.net/forums/viewtopic.php?t=6118
-redirect 301 /support.html              https://www.filebot.net/forums/viewforum.php?f=8
+redirect 301 /error/429.html            https://www.filebot.net/forums/viewtopic.php?t=9594
 redirect 301 /windows/support.html      https://www.filebot.net/forums/viewforum.php?f=10
 redirect 301 /mac/support.html          https://www.filebot.net/forums/viewforum.php?f=12
 redirect 301 /linux/support.html        https://www.filebot.net/forums/viewforum.php?f=11
 redirect 301 /syno/support.html         https://www.filebot.net/forums/viewforum.php?f=13
 redirect 301 /qnap/support.html         https://www.filebot.net/forums/viewforum.php?f=13
-redirect 301 /error/429.html            https://www.filebot.net/forums/viewtopic.php?t=9594
 redirect 301 /help/args.html            https://www.filebot.net/forums/viewtopic.php?t=1899
 redirect 301 /help/argument-files.html  https://www.filebot.net/forums/viewtopic.php?t=3244
 redirect 301 /help/generic-files.html   https://www.filebot.net/forums/viewtopic.php?t=2072
 redirect 301 /help/xattr.html           https://www.filebot.net/forums/viewtopic.php?t=324
-redirect 301 /help/plex.html            https://www.filebot.net/forums/viewtopic.php?t=4116
+redirect 301 /help/plex.html            https://www.filebot.net/forums/viewtopic.php?t=13466
 redirect 301 /help/presets.html         https://www.filebot.net/forums/viewtopic.php?t=3228
 redirect 301 /help/apply.html           https://www.filebot.net/forums/viewtopic.php?t=11079
 redirect 301 /help/keyboard.html        https://www.filebot.net/forums/viewtopic.php?t=12703
 redirect 301 /help/history.html         https://www.filebot.net/forums/viewtopic.php?t=12133
 redirect 301 /report.html               https://www.filebot.net/forums/viewforum.php?f=6
 redirect 301 /notes.html                https://www.filebot.net/forums/viewforum.php?f=7
+redirect 301 /support.html              https://www.filebot.net/forums/viewforum.php?f=8
+redirect 301 /node.html                 https://www.filebot.net/forums/viewtopic.php?t=2663
 redirect 301 /manpage.html              https://www.filebot.net/cli.html#arguments
 redirect 301 /tutorials.html            https://youtube.com/playlist?list=PLdPvEJhzxLMBBQrv9pmVumjzdGoEbQcH9
 redirect 301 /channel.html              https://discord.com/invite/cKVvZ2S
