--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -14,11 +14,12 @@ redirect 301 /mac/support.html          https://www.filebot.net/forums/viewforum
 redirect 301 /linux/support.html        https://www.filebot.net/forums/viewforum.php?f=11
 redirect 301 /syno/support.html         https://www.filebot.net/forums/viewforum.php?f=13
 redirect 301 /qnap/support.html         https://www.filebot.net/forums/viewforum.php?f=13
+redirect 301 /manual/plex.html          https://www.filebot.net/forums/viewtopic.php?t=13466
+redirect 301 /manual/anime.html         https://www.filebot.net/forums/viewtopic.php?t=2769
 redirect 301 /help/args.html            https://www.filebot.net/forums/viewtopic.php?t=1899
 redirect 301 /help/argument-files.html  https://www.filebot.net/forums/viewtopic.php?t=3244
 redirect 301 /help/generic-files.html   https://www.filebot.net/forums/viewtopic.php?t=2072
 redirect 301 /help/xattr.html           https://www.filebot.net/forums/viewtopic.php?t=324
-redirect 301 /help/plex.html            https://www.filebot.net/forums/viewtopic.php?t=13466
 redirect 301 /help/presets.html         https://www.filebot.net/forums/viewtopic.php?t=3228
 redirect 301 /help/apply.html           https://www.filebot.net/forums/viewtopic.php?t=11079
 redirect 301 /help/keyboard.html        https://www.filebot.net/forums/viewtopic.php?t=12703
