--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -25,6 +25,7 @@ redirect 301 /help/apply.html           https://www.filebot.net/forums/viewtopic
 redirect 301 /help/apply-script.html    https://www.filebot.net/forums/viewtopic.php?t=13769
 redirect 301 /help/keyboard.html        https://www.filebot.net/forums/viewtopic.php?t=12703
 redirect 301 /help/history.html         https://www.filebot.net/forums/viewtopic.php?t=12133
+redirect 301 /help/mediainfo.html       https://www.filebot.net/forums/viewtopic.php?t=4285
 redirect 301 /report.html               https://www.filebot.net/forums/viewforum.php?f=6
 redirect 301 /notes.html                https://www.filebot.net/forums/viewforum.php?f=7
 redirect 301 /support.html              https://www.filebot.net/forums/viewforum.php?f=8
