--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -40,6 +40,7 @@ redirect 301 /windows/winget.html       https://www.filebot.net/forums/viewtopic
 redirect 301 /windows/scoop.html        https://www.filebot.net/forums/viewtopic.php?t=12163
 redirect 301 /windows/chocolatey.html   https://chocolatey.org/packages/filebot/
 redirect 301 /mac/brew.html             https://www.filebot.net/forums/viewtopic.php?t=2049
+redirect 301 /linux/tar.html            https://www.filebot.net/forums/viewtopic.php?t=6057
 redirect 301 /linux/apt.html            https://www.filebot.net/forums/viewtopic.php?t=6028
 redirect 301 /linux/yum.html            https://www.filebot.net/forums/viewtopic.php?t=10631
 redirect 301 /linux/syno.html           https://www.filebot.net/forums/viewtopic.php?t=1802
