--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -64,17 +64,21 @@ Options -Indexes
 # Use UTF-8 as default charset for HTML files
 AddDefaultCharset UTF-8
 
+# Add missing mime types
+AddType image/webp .webp
+AddType font/woff2 .woff2
+
 # Cache Static Resources
 ExpiresActive on
 ExpiresByType text/html                 "access plus 1 day"
 ExpiresByType text/css                  "access plus 1 month"
 ExpiresByType text/plain                "access plus 1 month"
+ExpiresByType image/png                 "access plus 1 month"
+ExpiresByType image/gif                 "access plus 1 month"
+ExpiresByType image/webp                "access plus 1 month"
+ExpiresByType image/svg+xml             "access plus 1 month"
+ExpiresByType image/vnd.microsoft.icon  "access plus 1 month"
+ExpiresByType font/woff2                "access plus 1 month"
 ExpiresByType application/javascript    "access plus 1 month"
 ExpiresByType application/json          "access plus 1 month"
 ExpiresByType application/xml           "access plus 1 month"
-ExpiresByType image/svg+xml             "access plus 1 month"
-ExpiresByType image/png                 "access plus 1 month"
-ExpiresByType image/gif                 "access plus 1 month"
-ExpiresByType video/mp4                 "access plus 1 month"
-ExpiresByType image/vnd.microsoft.icon  "access plus 1 month"
-ExpiresByType application/font-sfnt     "access plus 1 month"
