--- a/ivy.xml
+++ b/ivy.xml
@@ -3,11 +3,11 @@
 	<info organisation="net.filebot" module="website" />
 	<dependencies>
 		<dependency org="org.apache.ant" name="ant" rev="1.10.12" />
-		<dependency org="org.codehaus.groovy" name="groovy-ant" rev="3.0.9" />
-		<dependency org="org.codehaus.groovy" name="groovy-json" rev="3.0.9" />
-		<dependency org="org.codehaus.groovy" name="groovy-xml" rev="3.0.9" />
-		<dependency org="org.codehaus.groovy" name="groovy-dateutil" rev="3.0.9" />
-		<dependency org="org.codehaus.groovy" name="groovy-groovydoc" rev="3.0.9" />
+		<dependency org="org.apache.groovy" name="groovy-ant" rev="4.0.21" />
+		<dependency org="org.apache.groovy" name="groovy-json" rev="4.0.21" />
+		<dependency org="org.apache.groovy" name="groovy-xml" rev="4.0.21" />
+		<dependency org="org.apache.groovy" name="groovy-dateutil" rev="4.0.21" />
+		<dependency org="org.apache.groovy" name="groovy-groovydoc" rev="4.0.21" />
 		<dependency org="net.filebot" name="ant-spk" rev="0.7.1" />
 	</dependencies>
 </ivy-module>
