--- a/build.xml
+++ b/build.xml
@@ -54,12 +54,8 @@
 
 		<!-- fix permissions -->
 		<exec executable="docker" failonerror="yes">
-			<arg line="run --rm -v ${gpg.home}:/root/.gnupg fedora:36" />
-			<arg line="find /root/.gnupg -type f -exec chmod -v 600 {} +" />
-		</exec>
-		<exec executable="docker" failonerror="yes">
-			<arg line="run --rm -v ${gpg.home}:/root/.gnupg fedora:36" />
-			<arg line="find /root/.gnupg -type d -exec chmod -v 700 {} +" />
+			<arg line="run --rm -v GNUPG:/root/.gnupg -v ${gpg.home}:/gpg --entrypoint sh rednoah/prm-build -c" />
+			<arg value="cp -rvf /gpg/* /root/.gnupg; find /root/.gnupg -type f -exec chmod 600 {} +; find /root/.gnupg -type d -exec chmod 700 {} +" />
 		</exec>
 
 		<!-- main -->
@@ -67,7 +63,7 @@
 			<fileset dir="${repo.release}" includes="*_amd64.deb" />
 		</copy>
 		<exec executable="docker" failonerror="yes">
-			<arg line="run --rm -v ${dist.deb.main}:/dist -v ${repo.deb}:/repo -v ${gpg.home}:/root/.gnupg rednoah/prm-build" />
+			<arg line="run --rm -v ${dist.deb.main}:/dist -v ${repo.deb}:/repo -v GNUPG:/root/.gnupg rednoah/prm-build" />
 			<arg line="--directory /dist --type deb --release stable --component main --arch amd64 --path /repo --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
 
@@ -76,7 +72,7 @@
 			<fileset dir="${repo.release}" includes="*_universal.deb" />
 		</copy>
 		<exec executable="docker" failonerror="yes">
-			<arg line="run --rm -v ${dist.deb.universal}:/dist -v ${repo.deb}:/repo -v ${gpg.home}:/root/.gnupg rednoah/prm-build" />
+			<arg line="run --rm -v ${dist.deb.universal}:/dist -v ${repo.deb}:/repo -v GNUPG:/root/.gnupg rednoah/prm-build" />
 			<arg line="--directory /dist --type deb --release universal --component main --arch all --path /repo --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
 
@@ -85,7 +81,7 @@
 			<fileset dir="${repo.release}" includes="*_universal-jdk8.deb" />
 		</copy>
 		<exec executable="docker" failonerror="yes">
-			<arg line="run --rm -v ${dist.deb.universal-jdk8}:/dist -v ${repo.deb}:/repo -v ${gpg.home}:/root/.gnupg rednoah/prm-build" />
+			<arg line="run --rm -v ${dist.deb.universal-jdk8}:/dist -v ${repo.deb}:/repo -v GNUPG:/root/.gnupg rednoah/prm-build" />
 			<arg line="--directory /dist --type deb --release universal-jdk8 --component main --arch all --path /repo --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
 	</target>
@@ -95,12 +91,18 @@
 	<target name="rpm" description="Update RPM Package Repository">
 		<delete dir="${repo.rpm}/main" verbose="yes" />
 
+		<!-- fix permissions -->
+		<exec executable="docker" failonerror="yes">
+			<arg line="run --rm -v GNUPG:/root/.gnupg -v ${gpg.home}:/gpg --entrypoint sh rednoah/prm-build -c" />
+			<arg value="cp -rvf /gpg/* /root/.gnupg; find /root/.gnupg -type f -exec chmod 600 {} +; find /root/.gnupg -type d -exec chmod 700 {} +" />
+		</exec>
+
 		<!-- main -->
 		<copy todir="${dist.rpm.main}" flatten="yes" preservelastmodified="yes" verbose="yes">
 			<fileset dir="${repo.release}" includes="*_amd64.rpm" />
 		</copy>
 		<exec executable="docker" failonerror="yes">
-			<arg line="run --rm -v ${dist.rpm.main}:/dist -v ${repo.rpm}:/repo -v ${gpg.home}:/root/.gnupg rednoah/prm-build" />
+			<arg line="run --rm -v ${dist.rpm.main}:/dist -v ${repo.rpm}:/repo -v GNUPG:/root/.gnupg rednoah/prm-build" />
 			<arg line="--directory /dist --type rpm --release main --arch x86_64 --path /repo --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
 	</target>
