--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -19,6 +19,7 @@ redirect 301 /manual/anime.html         https://www.filebot.net/forums/viewtopic
 redirect 301 /help/args.html            https://www.filebot.net/forums/viewtopic.php?t=1899
 redirect 301 /help/argument-files.html  https://www.filebot.net/forums/viewtopic.php?t=3244
 redirect 301 /help/generic-files.html   https://www.filebot.net/forums/viewtopic.php?t=2072
+redirect 301 /help/generic-prompt.html  https://www.filebot.net/forums/viewtopic.php?t=14137
 redirect 301 /help/xattr.html           https://www.filebot.net/forums/viewtopic.php?t=324
 redirect 301 /help/settings.html        https://www.filebot.net/forums/viewtopic.php?t=3913
 redirect 301 /help/presets.html         https://www.filebot.net/forums/viewtopic.php?t=3228
