--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -80,6 +80,8 @@ ExpiresByType text/plain                "access plus 1 month"
 ExpiresByType image/png                 "access plus 1 month"
 ExpiresByType image/gif                 "access plus 1 month"
 ExpiresByType image/webp                "access plus 1 month"
+ExpiresByType image/avif                "access plus 1 month"
+ExpiresByType image/jxl                 "access plus 1 month"
 ExpiresByType image/svg+xml             "access plus 1 month"
 ExpiresByType image/vnd.microsoft.icon  "access plus 1 month"
 ExpiresByType font/woff2                "access plus 1 month"
