--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -23,6 +23,8 @@ redirect 301 /help/generic-prompt.html  https://www.filebot.net/forums/viewtopic
 redirect 301 /help/xattr.html           https://www.filebot.net/forums/viewtopic.php?t=324
 redirect 301 /help/settings.html        https://www.filebot.net/forums/viewtopic.php?t=3913
 redirect 301 /help/presets.html         https://www.filebot.net/forums/viewtopic.php?t=3228
+redirect 301 /help/file-order.html      https://www.filebot.net/forums/viewtopic.php?t=13796
+redirect 301 /help/file-filter.html     https://www.filebot.net/forums/viewtopic.php?t=14936
 redirect 301 /help/apply.html           https://www.filebot.net/forums/viewtopic.php?t=11079
 redirect 301 /help/apply-script.html    https://www.filebot.net/forums/viewtopic.php?t=13769
 redirect 301 /help/keyboard.html        https://www.filebot.net/forums/viewtopic.php?t=12703
